# viewwer_android

./: build.gradle  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Panorama.html
app/src/main/cpp/: native_lib.cpp
app/src/main/res/anim/: bounce.xml  fade_in.xml
app/src/main/res/drawable/: background_edit_tour_clicked.xml  background_edit_tour_nonclicked.xml  border_bottom.xml  border_edit_profil_button.xml  border_edit_tour_description.xml  border_visite.xml  button_selector.xml  corner_radius.xml  edit_tour_circle_energ_a.xml  edit_tour_circle_energ_b.xml  edit_tour_circle_energ_c.xml  edit_tour_circle_energ_d.xml  edit_tour_circle_energ_e.xml  edit_tour_circle_energ_f.xml  edit_tour_circle_energ_g.xml  edit_tour_circle_ges_a.xml  edit_tour_circle_ges_b.xml  edit_tour_circle_ges_c.xml  edit_tour_circle_ges_d.xml  edit_tour_circle_ges_e.xml  edit_tour_circle_ges_f.xml  edit_tour_circle_ges_g.xml  init_circle.xml  rounded_bgk_btn_white.xml  rounded_border_cyan_button.xml  rounded_button.xml  rounded_cyan_button.xml  scrollbar_thumb.xml  text_button_selector.xml
app/src/main/res/drawable-ldpi/: corner_radius_dialog.xml  corner_radius_gray_stroke.xml  radius_gray_stroke.xml
app/src/main/res/drawable-xhdpi/: scrollbar_style.xml
app/src/main/res/layout/: activity_bottom_navigation.xml  activity_caroussel.xml  activity_change_password.xml  activity_congrat.xml  activity_create.xml  activity_create_user.xml  activity_create_user_particular.xml  list_spinner.xml  (+25 more)
(+87 files in other folders)
